# federation-head

./: .gitignore  .travis.yml  README.md  WORKSPACE  WORKSPACE.bazel  federation_deps.bzl  head_sync.py
.circleci/: config.yml
ci/: automerge_pr.sh  build-linux-bazel.sh  install-linux.sh  log-config.sh
test/: BUILD  WORKSPACE  hello.cc  hello.h  hello_main.cc  hello_test.cc  hello_test_z.cc
